--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 offset-md-3">
             {% if messages%}
                 {% for message in messages %}
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <div class="alert {% if message.tags %}{{ message.tags }}{% endif %} alert-dismissible fade show" role="alert">
                     {{ message }}
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
